@@ -1,3 +1,8 @@
+2006-04-20  Peter Johanson  <peter@peterjohanson.com>
+
+	* gtk/glue/cellrenderer.c: Make GetSize, Render, etc behave correctly
+	for all cases. Fixes #77949.
+
 2006-04-15  Zac Bowling	 <zac@zacbowling.com>
 	
 	* README.generator : Updated with link to GAPI guide on Wiki
